--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    color: white;
+    color: #4CAF50;
     overflow: hidden;
     background: #222;
 }
 button, input[type="text"], input[type="number"], .select-container, select {
     color: white;
-    background: #444;
+    background: #4CAF50;
     border: none;
     font-size: 14px;
     padding: 6px 8px;
@@ -76,7 +76,7 @@ header {
     overflow: hidden;
     background-color: #333;
     /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
-    /*background-image: url('LINK TO CAMERA SOURCE HERE');*/
+    background-image: url('http://iris.not.iac.es/axis-cgi/mjpg/video.cgi?resolution=320x240');
 }
 #tuning {
     width: 50vw;
